--- a/index.html
+++ b/index.html
@@ -80,17 +80,15 @@
       </div>
 
       <div id="sem2GPA">
-      <p> Your Semester 2 GPA is: </p>
-      </div>
-
-      <button class="calcBtn" onclick="calcTotalGPA()"> Calculate Overall GPA </button>
-
-      <div id="overallGPA">
-      <p> Your overall GPA is: </p>
+      <p class="gpaIntroText"> Your Semester 2 GPA is: </p>
       </div>
 
   </div>
 
+  <button class="calcBtn" onclick="calcTotalGPA()"> Calculate Overall GPA </button>
+  <div id="overallGPA">
+  <p class="gpaIntroText"> Your overall GPA is: </p>
+  </div>
 
   </body>
 </html>
